--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>AngularWorkshops</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root>
-    <style>
-      html {background: #171717;}
-      app-root {
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-        justify-content: center;
-        align-items: center;
-      }
-    </style>
-    <div class='loader'></div>
-  </app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>AngularWorkshops</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  </head>
+  <body>
+    <app-root>
+      <style>
+        html {
+          background: #171717;
+        }
+        app-root {
+          display: flex;
+          flex-direction: column;
+          min-height: 100vh;
+          justify-content: center;
+          align-items: center;
+        }
+      </style>
+      <div class="loader"></div>
+    </app-root>
+  </body>
 </html>
